# t-SNE-RAG-Enhanced-SafeLatentDiffusion

./: .gitignore  FanHwa_NoUse.ipynb  Jonathan.ipynb  RAG_SLD copy.ipynb  RAG_SLD.ipynb  RAG_SLD_tSNE.ipynb  RAG_SLD_with_detoxify.ipynb  README.md  Suggestions.ipynb  blocked_prompts.csv  eval_test_prompts.csv  obs.txt  pyproject.toml  rag_evaluation_200_relaion_coco_results.csv  rag_evaluation_results.csv  test_vector_sd.ipynb  test_vector_store.ipynb
ReLaion-COCO_200/: ReLaion-COCO_safe_prompts_200.csv
adversarial_prompts_store/de46689c-f569-44e8-8504-06cc2ca5baa8/: index_metadata.pickle
chickenrice/: Copy_of_Dark_Sleepy_v2.ipynb
violence_apvs_store/: chroma.sqlite3
