[project]
name = "safe-latent-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "chromadb>=1.0.20",
    "diffusers>=0.35.1",
    "ftfy>=6.3.1",
    "gdown>=5.2.0",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pip>=25.2",
    "scipy>=1.16.1",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.0",
]
